crawler for yelp

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,7 @@ pytz==2018.3
 requests==2.18.4
 urllib3==1.22
 vine==1.1.4
+django-choices==1.6.0
+validators==0.12.1
 
 # also need to install rabbit-mq server in the host machine.
